[tool.poetry]
name = "shap-hypetune"
version = "0.1.0"
description = ""
authors = ["Paul Bergmann <paulb@foresightlogic.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.5"
scipy = "^1.9.3"
scikit-learn = "^1.2.2"
shap = "^0.41.0"
hyperopt = "^0.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
